--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h3 {
     box-shadow: 0px 5px 10px 0px #aaa;
     position: fixed;
     width: 100%;
-    background: white;
+    background: red;
     color: black;
     opacity: .85;
     z-index: 99;
